# MySFMLTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: dino_metadata.txt
assets/scripts/: test.lua  test2.lua
code/Engine/: Engine.cpp  Game.cpp  GameState.cpp
header/Engine/: Game.hpp  GameState.hpp  GameStateManager.hpp
include/Application/: TestGame.hpp
include/Application/States/: TestState.hpp
include/Engine/: Engine.hpp  Entity.hpp  Game.hpp  GameState.hpp
include/Engine/Commons/: FrameSet.hpp  GameStateManager.hpp
include/Engine/Components/: LuaScriptComponent.hpp  MeshComponent.hpp  ScriptComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
include/Engine/Scene/: Entity.hpp
include/Engine/Scene/Components/: AnimationComponent.hpp  Components.hpp  MeshComponent.hpp  ScriptComponent.hpp  SpriteComponent.hpp  TextureComponent.hpp  TransformComponent.hpp
include/Engine/Scene/Systems/: AnimationSystem.hpp  DebugSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
include/Engine/Scripting/: LuaEntityWrapper.hpp  LuaSandbox.hpp  LuaSecurity.hpp  ScriptInstantiator.hpp  ScriptResource.hpp
include/Engine/Systems/: RenderSystem.hpp  ScriptSystem.hpp
src/: main.cpp
src/Application/States/: TestState.cpp
src/Engine/: Engine.cpp  Entity.cpp  Game.cpp  GameState.cpp  GameStateManager.cpp  Random.cpp
src/Engine/Commons/: GameState.cpp  GameStateManager.cpp  Random.cpp
src/Engine/Scene/: Entity.cpp
src/Engine/Scripting/: LuaSandbox.cpp  LuaSecurity.cpp  ScriptInstantiator.cpp  ScriptResource.cpp
src/Engine/Systems/: RenderSystem.cpp  ScriptSystem.cpp
(+5 files in other folders)
